<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatePatientFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">      <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/registerPatient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#DBDBDB"
                android:text="@string/register_new_patient"
                android:textAlignment="center"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/firstNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/first_name"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/lastNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/last_name"
                android:textSize="24sp" />



            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/email"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/phoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/phone_num"
                android:textSize="24sp" />

            <DatePicker
                android:id="@+id/dobInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/dob"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/genderInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/gender"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/addressInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/address"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/emergencyContactInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/emergency_contact"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/bloodTypeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/blood_type"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/heightInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/height"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/weightInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/weight"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/allergiesInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/allergies"
                android:textSize="24sp" />

            <Button
                android:id="@+id/udpatePatientBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_patient_btn"
                app:cornerRadius="0dp" />


        </LinearLayout>
    </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>