<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".AddConsultationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/createConsultation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#DBDBDB"
                android:text="@string/create_consultation"
                android:textAlignment="center"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/titleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/consultation_title"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/dateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/consultation_date"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/diagnoses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/consultation_diagnoses"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/treatmentInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/consultation_treatments"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/symptoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_borders"
                android:backgroundTint="#DBDBDB"
                android:hint="@string/consultation_symptoms"
                android:textSize="20sp" />


            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consultation_btn"
                app:cornerRadius="0dp" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>