<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddAppointmentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

      >

        <TextView
            android:id="@+id/createAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#DBDBDB"
            android:text="@string/create_schedule"
            android:textAlignment="center"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/patientInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/square_borders"
            android:backgroundTint="#DBDBDB"
            android:hint="@string/appointment_patient"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/dateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/square_borders"
            android:backgroundTint="#DBDBDB"
            android:hint="@string/appointment_date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reasonInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/square_borders"
            android:backgroundTint="#DBDBDB"
            android:hint="@string/appointment_reason"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_appointment"
            app:cornerRadius="0dp" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>